# FECS

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  main.cpp  old  run  uncrustify.cfg  unittests.h  workflow.md
.cache/clangd/index/: FECS.cpp.5388AF767284AF23.idx  FECS.h.52CF37435C8B9C33.idx  component.h.4BC7D213CEAE6DED.idx  component_bitset.h.4D558F667DB5DA6F.idx  component_pool.h.DDBB50E783DDD491.idx  entity.h.DA1D65DFE6E2C94B.idx  main.cpp.071FD869EBA40D0C.idx  main.cpp.4F45DF707767761C.idx  (+1 more)
.github/workflows/: test.yml
.obsidian/: workspace.json
docs/html/: annotated.html  annotated_dup.js  class_f_e_c_s_1_1_container_1_1_i_sparse_set-members.html  class_f_e_c_s_1_1_container_1_1_i_sparse_set.html  class_f_e_c_s_1_1_container_1_1_i_sparse_set.js  class_f_e_c_s_1_1_container_1_1_sparse_set-members.html  class_f_e_c_s_1_1_container_1_1_sparse_set.html  class_f_e_c_s_1_1_container_1_1_sparse_set.js  class_f_e_c_s_1_1_manager_1_1_component_manager-members.html  class_f_e_c_s_1_1_manager_1_1_component_manager.html  class_f_e_c_s_1_1_manager_1_1_entity_manager-members.html  class_f_e_c_s_1_1_manager_1_1_entity_manager.html  class_f_e_c_s_1_1_manager_1_1_entity_manager.js  class_f_e_c_s_1_1_registry-members.html  class_f_e_c_s_1_1_registry.html  class_f_e_c_s_1_1_registry.js  class_f_e_c_s_1_1_view-members.html  class_f_e_c_s_1_1_view.html  class_f_e_c_s_1_1_view.js  classes.html  component__manager_8h.html  component__manager_8h.js  component__manager_8h_source.html  dir_02c276ae48c5ac90cf59494e925f0223.html  dir_02c276ae48c5ac90cf59494e925f0223.js  dir_09e761304027c904456130627fd4dcf5.html  dir_09e761304027c904456130627fd4dcf5.js  dir_36500c45b28a8a46f200019f302f270c.html  dir_36500c45b28a8a46f200019f302f270c.js  dir_a66f66f9b5cd8be24c4d338d7841ab5a.html  dir_a66f66f9b5cd8be24c4d338d7841ab5a.js  dir_a71611b76a2bb02401667614e75fb992.html  dir_a71611b76a2bb02401667614e75fb992.js  dir_e4ed850a1c1e19b96461797e572e081f.html  dir_e4ed850a1c1e19b96461797e572e081f.js  doxygen_crawl.html  entity__manager_8h.html  entity__manager_8h.js  entity__manager_8h_source.html  fecs_8h_source.html  (+24 more)
docs/latex/: annotated.tex  class_f_e_c_s_1_1_container_1_1_i_sparse_set.eps  class_f_e_c_s_1_1_container_1_1_i_sparse_set.tex  class_f_e_c_s_1_1_container_1_1_sparse_set.eps  class_f_e_c_s_1_1_container_1_1_sparse_set.tex  class_f_e_c_s_1_1_manager_1_1_component_manager.tex  class_f_e_c_s_1_1_manager_1_1_entity_manager.tex  class_f_e_c_s_1_1_registry.tex  class_f_e_c_s_1_1_view.tex  component__manager_8h.tex  component__manager_8h_source.tex  entity__manager_8h.tex  entity__manager_8h_source.tex  fecs_8h_source.tex  files.tex  hierarchy.tex  refman.tex  registry_8h.tex  registry_8h_source.tex  sparse__set_8h.tex  sparse__set_8h_source.tex  struct_f_e_c_s_1_1_global_component.tex  types_8h.tex  types_8h_source.tex  view__manager_8h.tex  view__manager_8h_source.tex
examples/benchmark/: CMakeLists.txt  benchmark.h  main.cpp
examples/boids/: Boids.h  CMakeLists.txt  Components.h  Constants.h  Grid.h  Rendering.h  main.cpp
examples/querying/: CMakeLists.txt  main.cpp
examples/scheduling/: CMakeLists.txt  main.cpp
examples/tests/: CMakeLists.txt  main.cpp
includes/fecs/: fecs.h  fecs.hpp
src/: FECS.h  benchmark.h  component.h  component_bitset.h  component_pool.h  debug_utils.h  entity.h  fecs.h  sparse_set.h
src/FECS/: FECS.h  World.cpp  World.h
src/containers/: sparse_set.cpp
src/registry/: registry.cpp
(+87 files in other folders)
